// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowHide should render a default show-hide component 1`] = `
<div
  className="button"
>
  Test
  <div
    aria-hidden={true}
    className="toggle"
  />
  <button
    aria-disabled={false}
    aria-expanded={false}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Show More
  </button>
</div>
`;

exports[`ShowHide should render a no preview show-hide component 1`] = `
<div
  className="button"
>
  <div />
  <div
    aria-hidden={true}
    className="toggle"
  />
  <button
    aria-disabled={false}
    aria-expanded={false}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Show More
  </button>
</div>
`;

exports[`ShowHide should render an initially open show-hide component 1`] = `
<div
  className="button is-open"
>
  <div
    aria-hidden={false}
    className="toggle"
  >
    Full Text
  </div>
  <button
    aria-disabled={false}
    aria-expanded={true}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Hide
  </button>
</div>
`;

exports[`ShowHide should set icon prop correctly 1`] = `
<div
  className="button"
>
  Test
  <div
    aria-hidden={true}
    className="toggle"
  />
  <button
    aria-disabled={false}
    aria-expanded={false}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Show More
  </button>
</div>
`;

exports[`ShowHide should set icon prop correctly with custom icon 1`] = `
<div
  className="button"
  icon={
    <IconCaretLeft
      className=""
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
>
  Test
  <div
    aria-hidden={true}
    className="toggle"
  />
  <button
    aria-disabled={false}
    aria-expanded={false}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Show More
  </button>
</div>
`;
